# zephyr_rust_demo

./: CMakeLists.txt  Cargo.toml  README.md  README.rst  build.rs  prj.conf  sample.yaml
boards/: stm32f4_disco.overlay
src/: adc.c  adc_io.rs  button.rs  dac.c  encoder.rs  led.rs  lib.rs
