# Copyright (c) 2024 Linaro LTD
# SPDX-License-Identifier: Apache-2.0

[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "Blink an LED forever using the GPIO API"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = { version = "0.1.0", features = ["time-driver", "executor-zephyr", "async-drivers"] }
log = "0.4.22"
static_cell = "2.1"
heapless = "0.8"

[dependencies.embassy-futures]
version = "0.1.1"

[dependencies.embassy-sync]
version = "0.6.2"

[dependencies.critical-section]
version = "1.2"

[dependencies.embassy-time]
version = "0.4.0"
features = ["tick-hz-10_000"]

[dependencies.embassy-executor]
version = "0.7.0"
features = [
  "log",
  "task-arena-size-2048",
]

[build-dependencies]
zephyr-build = "0.1.0"
